Subindo as últimas alterações no trabalho 1

--- a/2bi/trab1/views/lista_programas.erb
+++ b/2bi/trab1/views/lista_programas.erb
@@ -29,7 +29,7 @@
 								<td></td>
 								<td></td>
 								<td>Nome</td>
-								<td>ID programa</td>
+								<td>ID Comunicador</td>
 								<td>ID Programa</td>
 								<td>Duração</td>
 								<td>Dias da Semana</td>
