--- a/2bi/trab1/views/programacao.erb
+++ b/2bi/trab1/views/programacao.erb
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<link rel='stylesheet' type='text/css' href='./css/estilo.css'>
-	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
 	<title>Lista de Comunicadores</title>
 </head>
 <body>
