--- a/2bi/trab1/views/tela_altera_comunicador.erb
+++ b/2bi/trab1/views/tela_altera_comunicador.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel='stylesheet' type='text/css' href='./css/estilo.css'>
-	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"/>
+	<link rel='stylesheet' type='text/css' href='/css/estilo.css'>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
 	<title>Alterar Comunicador</title>
 </head>
 <body>
