--- a/2bi/trab1/views/tela_altera_programa.erb
+++ b/2bi/trab1/views/tela_altera_programa.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel='stylesheet' type='text/css' href='./csspro.id_c = params['id_c'].to_i  /estilo.css'>
-	<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"/>
+	<link rel='stylesheet' type='text/css' href='./css/estilo.css'>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
 	<title>Adicionar Programa</title>
 </head>
 <body>
@@ -28,8 +28,6 @@
 						<form action='/altera_programa' method='post'>
 							<div class="input-group col-lg-12">
 							  <input type="text" class="form-control" placeholder="Nome" name='nome' value="<%= @programa.nome %>" aria-describedby="basic-addon3">
-							   <input type="number" class="form-control" placeholder="ID Comunicador" name='id_c' aria-describedby="basic-addon3" 
-							   value="<%= @programa.id_c %>">
 							  <input type="number" class="form-control" placeholder="Duração (em minutos)" name='duracao' aria-describedby="basic-addon3" value="<%= @programa.duracao %>">
 							  <input type="text" class="form-control" placeholder="Dias da Semana (dias da semana que o programa vai ao ar)" name='dias_da_semana' aria-describedby="basic-addon3" value="<%= @programa.dias_da_semana %>">
 							  <input type="number" class="form-control" placeholder="Hora Inicial (em números apenas: 00-24)" name='hora_inicio' aria-describedby="basic-addon3" value="<%= @programa.hora_inicio %>">
