--- a/3bi/aula/views/index.erb
+++ b/3bi/aula/views/index.erb
@@ -4,7 +4,7 @@
 	<title>Home</title>
 </head>
 <body>
-	<h1>Lista</h1>
+	<h1>Lista Professores</h1>
 
 	<table>
 		<% @vet1.each do |professor| %>
@@ -18,9 +18,43 @@
 
 		<% end %>
 	</table>
+	<br>
+	<hr>
+	<h1>Lista Alunos</h1>
+	<table>
+		<% @aluno.each do |aluno| %>
+			<tr>
+				<td><%=aluno.id%></td>
+				<td><%=aluno.nome%></td>
+				<td><%=aluno.professor.nome%></td>
+				<td><a href="/excluir_aluno/<%=aluno.id%>">Excluir</td>
+				<td><a href="/tela_alterar_aluno/<%=aluno.id%>">Editar</td>
+			</tr>
 
+		<% end %>
+	</table>
 	<br>
 	<br>
-	<a href="/adicionar">Adicionar Professor</a>
+	<hr>
+	<h1>Lista Atendimentos</h1>
+	<table>
+		<% @atendimentos.each do |atendimento| %>
+			<tr>
+				<td><%=atendimento.id%></td>
+				<td><%=atendimento.dataHora%></td>
+				<td><a href="/excluir_atendimento/<%=atendimento.id%>">Excluir</td>
+				<td><a href="/tela_alterar_atendimento/<%=atendimento.id%>">Editar</td>
+				<td><a href="/tela_incorporar_aluno/<%=atendimento.id%>">Incorporar Aluno</a></td>
+			</tr>
+
+		<% end %>
+	</table>
+	<br>
+	<br>
+	<a href="/adicionar">Adicionar Professor</a><br><br>
+	<a href="/tela_adicionar_aluno">Adicionar Aluno</a><br><br>
+	<a href="/tela_adicionar_atendimento">Adicionar Atendimento</a>
+	
+
 </body>
 </html>
