Subindo o trabalho 1 do 3o bimestre

--- a/3bi/trab1/views/index.erb
+++ b/3bi/trab1/views/index.erb
@@ -24,8 +24,17 @@
 	<br>
 	<a href='/lista_comanda'>Listar Comanda</a>
 	<br>
-	<h2>Listar</h2>
+	<a href='/lista_comandas_em_aberto'>Listar Comandas em Aberto</a>
+	<br>
+	<a href='/lista_melhores_garcons'>Listar Melhores Garçons</a>
+	<br>
+	<a href='/lista_clientela_frequente'>Listar os Clientes Mais Frequentes</a>
+	<br>
+	<hr>
+	<h2>Outras funcionalidades</h2>
 	<a href='/incorpora_produto'>Incorporar Produto a uma Comanda</a>
+	<br>
+	
 	<br>
 	
 </body>
